# photo-copy

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
